add commit & test #issue 804